...
                )
                .background(MaterialTheme.colors.surface)
                .fillMaxWidth()
                .padding(dimens.medium)
                .padding(end = dimens.medium)
                .onFocusChanged { onFocusChanged(it) }
                .testTag("search_text_field")
        )
        if (shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.body1,
                fontWeight = FontWeight.Light,
...
